--- a/.env.example
+++ b/.env.example
@@ -2,3 +2,6 @@ DATASOURCE_HOST=localhost
 DATASOURCE_USERNAME=
 DATASOURCE_PASSWORD=
 DATASOURCE_DB=nest-tester-db
+
+# Node environment
+NODE_ENV=development
